[misc] Fix the CKEditor build on Java 17.